Update generic.html add instagram

--- a/generic.html
+++ b/generic.html
@@ -153,7 +153,7 @@
 							<li class="icon solid fa-envelope"><a href="#">yfuturewebsite@gmail.com</a></li>
 							<!-- <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 							<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li> -->
-							<!-- <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li> -->
+							<li class="icon brands fa-instagram"><a href="https://www.instagram.com/itcyberguard.dezvoltarewebsite/">itcyberguard.dezvoltarewebsite</a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; All rights reserved.</li><li>IT CyberGuard</a></li>
